--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,306 @@
-<html>  <head>    <meta content="text/html; charset=UTF-8" http-equiv="content-type">    <title>Bible API Aggregate Service</title>    <style type="text/css">.code {    font-family: "Lucida Console", Monaco, monospace;    font-size: small;}.ind {    margin-left: 40px;}#header {    background-image: url("images/bible.png");}#title {  text-shadow: 2px 2px 0px white;    color: #663366;    font-variant: small-caps;}body {    width: 700px;    font-family: Calibri, Arial, Helvetica, sans-serif;}h2 {    color: #663366;}h1 {  text-shadow: 2px 2px 0px #999999;}</style></head>  <body>    <h1 id="title"></h1>    <table style="width: 700px; height: 67px;" border="0">      <tbody>        <tr>          <td id="header">            <h1 id="title">Bible API Aggregate Web Service</h1>          </td>        </tr>      </tbody>    </table>    The Bible API Aggregate Web Service brings together a number of Bible APIs    on the web to offer a comprehensive set of Bibles to quote from. This    service offers two REST-based APIs: <a href="#getVersions">getVersions</a>    and <a href="#getQuote">getQuote</a>.<br>    <h2> <a name="getVersions"></a>getVersions</h2>    <p>Lists all supported Bible versions. </p>    <h3>Format</h3>    <p class="ind"><a class="code" href="http://service/getVersions" title="http://service/getVersions">http://service/getVersions</a></p>    <h3> Returns</h3>    This returns a JSON object of key/value pairs. The <em>keys</em> are the    keys that can be used as the Bible version parameter in the getQuote service    and the <em>values</em> are objects with title, description, and copyright    entries in plain text. <br>    <p> Example:</p>    <div class="code ind"> { <br>      <div class="code ind">asv: { <br>        <div class="code ind"> id: "asv",<br>          title : "American Standard Version", <br>          copyright : "Public Domain", <br>          description : "The ASV has long been regarded by many scholars..." </div>        }, ... </div>      } </div>    <p>The following Bibles are currently available: </p>    <% for (var i in bibles) { %>    	<div class="ind"><b>Key:</b> <%= bibles[i].id %></div>   		<div class="ind"><b>Title:</b> <%= bibles[i].title %></div>   		<div class="ind"><b>Description:</b> <%= bibles[i].description %></div> 		<div class="ind"><b>Copyright:</b> <%= bibles[i].copyright %></div>   		<br>	<% } %>    <h2><a name="getQuote"></a>getQuote</h2>    <p>Look up a book/chapter/verse in a particular Bible version.&nbsp;</p>    <h3>Format</h3>    <p class="code ind">http://service/getQuote/?version=&lt;version&gt;&amp;book=&lt;book&gt;&amp;chapter=&lt;chapter&gt;&amp;verse=&lt;verse&gt;</p>    <p class="ind"></p>    <table style="border=" 0"="" cellpadding="5" cellspacing="1">      <tbody>      </tbody>      <thead>        <tr style="background-color: silver;">          <td><strong>Parameter</strong></td>          <td><strong>Type</strong></td>          <td><strong>Description</strong></td>        </tr>      </thead>      <tbody>        <tr>          <td>version</td>          <td><em>string</em></td>          <td>One of the keys listed in the <a href="#getVersions">getVersions</a>            call.</td>        </tr>        <tr>          <td>book</td>          <td><em>string</em></td>          <td>One of the books of the bible.</td>        </tr>        <tr>          <td>chapter</td>          <td><em>number</em></td>          <td>A chapter within the book.</td>        </tr>        <tr>          <td>verse</td>          <td><em>number</em> or <em>range</em></td>          <td>Number or range of numbers within the chapter. A range is            signified by a number followed by minus sign and then another            number.</td>        </tr>      </tbody>    </table>    <p>Example:</p>    <p class="code ind">http://service/getQuote/?version=esv&amp;book=John&amp;chapter=3&amp;verse=16</p>    <h3>Returns</h3>    <p>A JSON object with the version, book, chapter, verse, and associated      passage.</p>    <p>Example:</p>    <div class="code ind">{      <div class="code ind">version: 'esv',<br>        book: 'John',<br>        chapter: 3, <br>        verse: 16, <br>        passage: "\"For God so loved the world, that he gave his only Son, that        whoever believes in him should not perish but have eternal life."" </div>      }</div>    <h2>Credits</h2>    <p>Many thanks to the following services: <a href="http://api.biblia.com/docs/">Biblia.com</a>,      <a href="http://bibles.org/pages/api">Bible Search</a>, <a href="http://www.esvapi.org/api">ESV
-        Bible Web Service</a>, and <a href="https://labs.bible.org/api_web_service">Bible.org</a></p>  </body></html>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<style>
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote {
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    color: #737373;
+    background-color: white;
+    margin: 10px 13px 10px 13px;
+}
+table {
+	margin: 10px 0 15px 0;
+	border-collapse: collapse;
+}
+td,th {	
+	border: 1px solid #ddd;
+	padding: 3px 10px;
+}
+th {
+	padding: 5px 10px;	
+}
+
+a {
+    color: #0069d6;
+}
+a:hover {
+    color: #0050a3;
+    text-decoration: none;
+}
+a img {
+    border: none;
+}
+p {
+    margin-bottom: 9px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #404040;
+    line-height: 36px;
+}
+h1 {
+    margin-bottom: 18px;
+    font-size: 30px;
+}
+h2 {
+    font-size: 24px;
+}
+h3 {
+    font-size: 18px;
+}
+h4 {
+    font-size: 16px;
+}
+h5 {
+    font-size: 14px;
+}
+h6 {
+    font-size: 13px;
+}
+hr {
+    margin: 0 0 19px;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+}
+blockquote {
+    padding: 13px 13px 21px 15px;
+    margin-bottom: 18px;
+    font-family:georgia,serif;
+    font-style: italic;
+}
+blockquote:before {
+    content:"\201C";
+    font-size:40px;
+    margin-left:-10px;
+    font-family:georgia,serif;
+    color:#eee;
+}
+blockquote p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    margin-bottom: 0;
+    font-style: italic;
+}
+code, pre {
+    font-family: Monaco, Andale Mono, Courier New, monospace;
+}
+code {
+    background-color: #fee9cc;
+    color: rgba(0, 0, 0, 0.75);
+    padding: 1px 3px;
+    font-size: 12px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+pre {
+    display: block;
+    padding: 14px;
+    margin: 0 0 18px;
+    line-height: 16px;
+    font-size: 11px;
+    border: 1px solid #d9d9d9;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+pre code {
+    background-color: #fff;
+    color:#737373;
+    font-size: 11px;
+    padding: 0;
+}
+@media screen and (min-width: 914px) {
+    body {
+        width: 854px;
+        margin:10px auto;
+    }
+}
+@media print {
+	body,code,pre code,h1,h2,h3,h4,h5,h6 {
+		color: black;
+	}
+	table, pre {
+		page-break-inside: avoid;
+	}
+}
+</style>
+<title>Bible Quote Aggregate Service</title>
+
+</head>
+<body>
+<p><img src="images/bible.png" title="Bible Quote Aggregate Service" alt="Header Image" /></p>
+
+<h1>Bible Quote Aggregate Service</h1>
+
+<p>The Bible API Aggregate Web Service brings together a number of Bible APIs on the web to offer a comprehensive set of Bibles to quote from. This service offers thre REST-based APIs: <a href="#versions.json">versions.json</a>, <a href="#version.json">version.json</a>,  and <a href="#quote.json">quote.json</a>.</p>
+
+<h2><span id="versions.json">versions.json</span></h2>
+
+<p>Lists all supported Bible versions.</p>
+
+<h3>Format</h3>
+
+<pre><code>http://service/versions.json
+</code></pre>
+
+<h3>Returns</h3>
+
+<p>This returns a JSON object of key/value pairs. The keys are the keys that can be used as the Bible <em>version</em> parameter in the <a href="#quote.json">quote.json</a> service and the values are objects with title, description, and copyright entries in plain text.</p>
+
+<h4>Example</h4>
+
+<pre><code>{ 
+    asv: { 
+        id: "asv",
+        title : "American Standard Version", 
+        copyright : "Public Domain", 
+        description : "The ASV has long been regarded by many scholars..."
+    }, 
+    amp: {
+        id: "amp",
+
+    }, ...
+}
+</code></pre>
+
+<h3>Currently Available Bible Versions</h3>
+   <% for (var i in bibles) { %>
+    	<div class="ind"><b>Key:</b> <%= bibles[i].id %></div>
+   		<div class="ind"><b>Title:</b> <%= bibles[i].title %></div>
+   		<div class="ind"><b>Description:</b> <%= bibles[i].description %></div>
+ 		<div class="ind"><b>Copyright:</b> <%= bibles[i].copyright %></div>
+   		<br>
+	<% } %>
+<h2><span id="version.json">version.json</span></h2>
+
+<p>Gets information about a particular Bible version.</p>
+
+<h3>Format</h3>
+
+<pre><code>http://service/version.json/?version=&lt;version&gt;
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th> Parameter </th>
+<th> Type </th>
+<th> Description </th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td> version </td>
+<td> <em>string</em> </td>
+<td> One of the keys listed in the <a href="#versions.json">versions.json</a> call. </td>
+</tr>
+</tbody>
+</table>
+
+
+<h4>Example</h4>
+
+<pre><code>http://service/version.json/?version=esv
+</code></pre>
+
+<h3>Returns</h3>
+
+<p>This returns a JSON object of key/value pairs for the version including title, description, and copyright entries in plain text.</p>
+
+<h4>Example</h4>
+
+<pre><code>{
+    id: "esv",
+    title: "English Standard Version",
+    copyright: "Copyright 2001 by Crossway, a publishing ministry of Good News Publishers.",
+    description: "The ESV Bible (English Standard Version) is an “essentially literal” translation of the Bible in contemporary English. The ESV Bible emphasizes “word-for-word” accuracy, literary excellence, and depth of meaning."
+}
+</code></pre>
+
+<h2><span id="quote.json">quote.json</span></h2>
+
+<p>Look up a book/chapter/verse in a particular Bible version.</p>
+
+<h3>Format</h3>
+
+<pre><code>http://service/quote.json/?version=&lt;version&gt;&amp;book=&lt;book&gt;&amp;chapter=&lt;chapter&gt;&amp;verse=&lt;verse&gt;
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th> Parameter </th>
+<th> Type </th>
+<th> Description </th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td> version </td>
+<td> <em>string</em> </td>
+<td> One of the keys listed in the <a href="#versions.json">versions.json</a> call. </td>
+</tr>
+<tr>
+<td> book </td>
+<td> <em>string</em> </td>
+<td> One of the books of the bible. </td>
+</tr>
+<tr>
+<td> chapter </td>
+<td> <em>number</em> </td>
+<td> A chapter within the book. </td>
+</tr>
+<tr>
+<td> verse </td>
+<td> number or range </td>
+<td>     Number or range of numbers within the chapter. A range is signified by a number followed by minus sign and then another number. </td>
+</tr>
+</tbody>
+</table>
+
+
+<h4>Example</h4>
+
+<pre><code>http://service/quote.json/?version=esv&amp;book=John&amp;chapter=3&amp;verse=16
+</code></pre>
+
+<h3>Returns</h3>
+
+<p>A JSON object with the version, book, chapter, verse, and associated passage.</p>
+
+<h4>Example</h4>
+
+<pre><code>{
+    version: 'esv',
+    book: 'John',
+    chapter: 3, 
+    verse: 16, 
+    text: "\"For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life.""
+}
+</code></pre>
+
+<h2>Credits</h2>
+
+<p>Many thanks to the following services: <a href="http://api.biblia.com/docs/">Biblia.com</a>, <a href="http://bibles.org/pages/api">Bible Search</a>, <a href="http://www.esvapi.org/api">ESV Bible Web Service</a>, and <a href="https://labs.bible.org/api_web_service">Bible.org</a></p>
+</body>
+</html>
